src/wrapper/torch_api_generated.h

void atg_max_pool3d_with_indices(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool3d_with_indices_backward(tensor *, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode, tensor indices);
void atg_max_pool3d_with_indices_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode, tensor indices);
void atg_max_pool3d_with_indices_forward(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool3d_with_indices_forward_out(tensor *, tensor output, tensor indices, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool3d_with_indices_out(tensor *, tensor output, tensor indices, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_unpool2d(tensor *, tensor self, tensor indices, long int *output_size_data, int output_size_len);
void atg_max_unpool2d_backward(tensor *, tensor grad_output, tensor self, tensor indices, long int *output_size_data, int output_size_len);
void atg_max_unpool2d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor indices, long int *output_size_data, int output_size_len);
void atg_max_unpool2d_forward(tensor *, tensor self, tensor indices, long int *output_size_data, int output_size_len);
void atg_max_unpool2d_forward_out(tensor *, tensor output, tensor self, tensor indices, long int *output_size_data, int output_size_len);
void atg_max_unpool2d_out(tensor *, tensor output, tensor self, tensor indices, long int *output_size_data, int output_size_len);
void atg_max_unpool3d(tensor *, tensor self, tensor indices, long int *output_size_data, int output_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len);
void atg_max_unpool3d_backward(tensor *, tensor grad_output, tensor self, tensor indices, long int *output_size_data, int output_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len);
void atg_max_unpool3d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor indices, long int *output_size_data, int output_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len);
void atg_max_unpool3d_forward(tensor *, tensor self, tensor indices, long int *output_size_data, int output_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len);
void atg_max_unpool3d_forward_out(tensor *, tensor output, tensor self, tensor indices, long int *output_size_data, int output_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len);
void atg_max_unpool3d_out(tensor *, tensor output, tensor self, tensor indices, long int *output_size_data, int output_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len);
void atg_max_values(tensor *, tensor self, int64_t dim, int keepdim);
void atg_mean1(tensor *, tensor self, int dtype);
void atg_mean2(tensor *, tensor self);
void atg_mean3(tensor *, tensor self, int64_t dim, int keepdim, int dtype);
void atg_mean4(tensor *, tensor self, int64_t dim, int keepdim);
void atg_mean5(tensor *, tensor self, int64_t dim, int dtype);
void atg_mean_out1(tensor *, tensor result, tensor self, int64_t dim, int keepdim, int dtype);
void atg_mean_out2(tensor *, tensor result, tensor self, int64_t dim, int keepdim);
void atg_mean_out3(tensor *, tensor result, tensor self, int64_t dim, int dtype);
void atg_median(tensor *, tensor self, int64_t dim, int keepdim);
void atg_median_out(tensor *, tensor values, tensor indices, tensor self, int64_t dim, int keepdim);
void atg_min(tensor *, tensor self, tensor other);
void atg_min1(tensor *, tensor self, int64_t dim, int keepdim);
void atg_min_out1(tensor *, tensor result, tensor self, tensor other);
void atg_min_out2(tensor *, tensor min, tensor min_indices, tensor self, int64_t dim, int keepdim);
void atg_min_values(tensor *, tensor self, int64_t dim, int keepdim);
void atg_miopen_batch_norm(tensor *, tensor input, tensor weight, tensor bias, tensor running_mean, tensor running_var, int training, double exponential_average_factor, double epsilon);
void atg_miopen_batch_norm_backward(tensor *, tensor input, tensor grad_output, tensor weight, tensor running_mean, tensor running_var, tensor save_mean, tensor save_var, double epsilon);
void atg_miopen_convolution(tensor *, tensor self, tensor weight, tensor bias, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_miopen_convolution_backward_bias(tensor *, tensor grad_output);
void atg_miopen_convolution_backward_input(tensor *, long int *self_size_data, int self_size_len, tensor grad_output, tensor weight, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_miopen_convolution_backward_weight(tensor *, long int *weight_size_data, int weight_size_len, tensor grad_output, tensor self, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_miopen_convolution_transpose(tensor *, tensor self, tensor weight, tensor bias, long int *padding_data, int padding_len, long int *output_padding_data, int output_padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_miopen_convolution_transpose_backward_input(tensor *, tensor grad_output, tensor weight, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_miopen_convolution_transpose_backward_weight(tensor *, long int *weight_size_data, int weight_size_len, tensor grad_output, tensor self, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_mkldnn_convolution(tensor *, tensor self, tensor weight, tensor bias, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups);
void atg_mkldnn_convolution_backward_input(tensor *, long int *self_size_data, int self_size_len, tensor grad_output, tensor weight, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int bias_defined);
void atg_mkldnn_convolution_backward_weights(tensor *, long int *weight_size_data, int weight_size_len, tensor grad_output, tensor self, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int bias_defined);
void atg_mm(tensor *, tensor self, tensor mat2);
void atg_mm_out(tensor *, tensor result, tensor self, tensor mat2);
void atg_mode(tensor *, tensor self, int64_t dim, int keepdim);
void atg_mode_out(tensor *, tensor values, tensor indices, tensor self, int64_t dim, int keepdim);
void atg_mse_loss(tensor *, tensor self, tensor target, int64_t reduction);
void atg_mse_loss_backward(tensor *, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_mse_loss_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_mse_loss_forward(tensor *, tensor self, tensor target, int64_t reduction);
void atg_mse_loss_forward_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_mse_loss_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_mul(tensor *, tensor self, tensor other);
void atg_mul1(tensor *, tensor self, scalar other);
void atg_mul_(tensor *, tensor self, tensor other);
void atg_mul_1(tensor *, tensor self, scalar other);
void atg_mul_out(tensor *, tensor result, tensor self, tensor other);
void atg_multilabel_margin_loss(tensor *, tensor self, tensor target, int64_t reduction);
void atg_multilabel_margin_loss_backward(tensor *, tensor grad_output, tensor self, tensor target, int64_t reduction, tensor is_target);
void atg_multilabel_margin_loss_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor target, int64_t reduction, tensor is_target);
void atg_multilabel_margin_loss_forward(tensor *, tensor self, tensor target, int64_t reduction);
void atg_multilabel_margin_loss_forward_out(tensor *, tensor output, tensor is_target, tensor self, tensor target, int64_t reduction);
void atg_multilabel_margin_loss_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_multinomial(tensor *, tensor self, int64_t num_samples, int replacement);
void atg_multinomial_out(tensor *, tensor result, tensor self, int64_t num_samples, int replacement);
void atg_mv(tensor *, tensor self, tensor vec);
void atg_mv_out(tensor *, tensor result, tensor self, tensor vec);
void atg_mvlgamma(tensor *, tensor self, int64_t p);
void atg_mvlgamma_(tensor *, tensor self, int64_t p);
void atg_narrow(tensor *, tensor self, int64_t dim, int64_t start, int64_t length);
void atg_narrow_copy(tensor *, tensor self, int64_t dim, int64_t start, int64_t length);
void atg_native_clone(tensor *, tensor self);
void atg_native_norm(tensor *, tensor self);
void atg_native_pow(tensor *, tensor self, scalar exponent);
void atg_native_pow_out(tensor *, tensor result, tensor self, scalar exponent);
void atg_native_resize_as_(tensor *, tensor self, tensor the_template);
void atg_native_zero_(tensor *, tensor self);
void atg_ne(tensor *, tensor self, tensor other);
void atg_ne_(tensor *, tensor self, tensor other);
void atg_ne_out(tensor *, tensor result, tensor self, tensor other);
void atg_neg(tensor *, tensor self);
void atg_neg_(tensor *, tensor self);
void atg_neg_out(tensor *, tensor result, tensor self);
void atg_nll_loss(tensor *, tensor self, tensor target, tensor weight, int64_t reduction, int64_t ignore_index);