src/stubs/torch_bindings_generated.ml


  let max_pool3d_with_indices =
    foreign "atg_max_pool3d_with_indices"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool3d_with_indices_backward =
    foreign "atg_max_pool3d_with_indices_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> t @-> returning void)

  let max_pool3d_with_indices_backward_out =
    foreign "atg_max_pool3d_with_indices_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> t @-> returning void)

  let max_pool3d_with_indices_forward =
    foreign "atg_max_pool3d_with_indices_forward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool3d_with_indices_forward_out =
    foreign "atg_max_pool3d_with_indices_forward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool3d_with_indices_out =
    foreign "atg_max_pool3d_with_indices_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_unpool2d =
    foreign "atg_max_unpool2d"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let max_unpool2d_backward =
    foreign "atg_max_unpool2d_backward"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let max_unpool2d_backward_out =
    foreign "atg_max_unpool2d_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let max_unpool2d_forward =
    foreign "atg_max_unpool2d_forward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let max_unpool2d_forward_out =
    foreign "atg_max_unpool2d_forward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let max_unpool2d_out =
    foreign "atg_max_unpool2d_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let max_unpool3d =
    foreign "atg_max_unpool3d"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let max_unpool3d_backward =
    foreign "atg_max_unpool3d_backward"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let max_unpool3d_backward_out =
    foreign "atg_max_unpool3d_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let max_unpool3d_forward =
    foreign "atg_max_unpool3d_forward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let max_unpool3d_forward_out =
    foreign "atg_max_unpool3d_forward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let max_unpool3d_out =
    foreign "atg_max_unpool3d_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let max_values =
    foreign "atg_max_values"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let mean1 =
    foreign "atg_mean1"
    (ptr t @-> t @-> int @-> returning void)

  let mean2 =
    foreign "atg_mean2"
    (ptr t @-> t @-> returning void)

  let mean3 =
    foreign "atg_mean3"
    (ptr t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let mean4 =
    foreign "atg_mean4"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let mean5 =
    foreign "atg_mean5"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let mean_out1 =
    foreign "atg_mean_out1"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let mean_out2 =
    foreign "atg_mean_out2"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let mean_out3 =
    foreign "atg_mean_out3"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let median =
    foreign "atg_median"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let median_out =
    foreign "atg_median_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let min =
    foreign "atg_min"
    (ptr t @-> t @-> t @-> returning void)

  let min1 =
    foreign "atg_min1"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let min_out1 =
    foreign "atg_min_out1"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let min_out2 =
    foreign "atg_min_out2"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let min_values =
    foreign "atg_min_values"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let miopen_batch_norm =
    foreign "atg_miopen_batch_norm"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> int @-> double @-> double @-> returning void)

  let miopen_batch_norm_backward =
    foreign "atg_miopen_batch_norm_backward"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> t @-> t @-> double @-> returning void)

  let miopen_convolution =
    foreign "atg_miopen_convolution"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let miopen_convolution_backward_bias =
    foreign "atg_miopen_convolution_backward_bias"
    (ptr t @-> t @-> returning void)

  let miopen_convolution_backward_input =
    foreign "atg_miopen_convolution_backward_input"
    (ptr t @-> ptr long @-> int @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let miopen_convolution_backward_weight =
    foreign "atg_miopen_convolution_backward_weight"
    (ptr t @-> ptr long @-> int @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let miopen_convolution_transpose =
    foreign "atg_miopen_convolution_transpose"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let miopen_convolution_transpose_backward_input =
    foreign "atg_miopen_convolution_transpose_backward_input"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let miopen_convolution_transpose_backward_weight =
    foreign "atg_miopen_convolution_transpose_backward_weight"
    (ptr t @-> ptr long @-> int @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let mkldnn_convolution =
    foreign "atg_mkldnn_convolution"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> returning void)

  let mkldnn_convolution_backward_input =
    foreign "atg_mkldnn_convolution_backward_input"
    (ptr t @-> ptr long @-> int @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> returning void)

  let mkldnn_convolution_backward_weights =
    foreign "atg_mkldnn_convolution_backward_weights"
    (ptr t @-> ptr long @-> int @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> returning void)

  let mm =
    foreign "atg_mm"
    (ptr t @-> t @-> t @-> returning void)

  let mm_out =
    foreign "atg_mm_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let mode =
    foreign "atg_mode"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let mode_out =
    foreign "atg_mode_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let mse_loss =
    foreign "atg_mse_loss"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let mse_loss_backward =
    foreign "atg_mse_loss_backward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let mse_loss_backward_out =
    foreign "atg_mse_loss_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let mse_loss_forward =
    foreign "atg_mse_loss_forward"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let mse_loss_forward_out =
    foreign "atg_mse_loss_forward_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let mse_loss_out =
    foreign "atg_mse_loss_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let mul =
    foreign "atg_mul"
    (ptr t @-> t @-> t @-> returning void)

  let mul1 =
    foreign "atg_mul1"
    (ptr t @-> t @-> scalar @-> returning void)

  let mul_ =
    foreign "atg_mul_"
    (ptr t @-> t @-> t @-> returning void)

  let mul_1 =
    foreign "atg_mul_1"
    (ptr t @-> t @-> scalar @-> returning void)

  let mul_out =
    foreign "atg_mul_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let multilabel_margin_loss =
    foreign "atg_multilabel_margin_loss"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let multilabel_margin_loss_backward =
    foreign "atg_multilabel_margin_loss_backward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> t @-> returning void)

  let multilabel_margin_loss_backward_out =
    foreign "atg_multilabel_margin_loss_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> t @-> returning void)

  let multilabel_margin_loss_forward =
    foreign "atg_multilabel_margin_loss_forward"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let multilabel_margin_loss_forward_out =
    foreign "atg_multilabel_margin_loss_forward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let multilabel_margin_loss_out =
    foreign "atg_multilabel_margin_loss_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let multinomial =
    foreign "atg_multinomial"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let multinomial_out =
    foreign "atg_multinomial_out"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let mv =
    foreign "atg_mv"
    (ptr t @-> t @-> t @-> returning void)

  let mv_out =
    foreign "atg_mv_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let mvlgamma =
    foreign "atg_mvlgamma"
    (ptr t @-> t @-> int64_t @-> returning void)

  let mvlgamma_ =
    foreign "atg_mvlgamma_"
    (ptr t @-> t @-> int64_t @-> returning void)

  let narrow =
    foreign "atg_narrow"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int64_t @-> returning void)

  let narrow_copy =
    foreign "atg_narrow_copy"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int64_t @-> returning void)

  let native_clone =
    foreign "atg_native_clone"
    (ptr t @-> t @-> returning void)

  let native_norm =
    foreign "atg_native_norm"
    (ptr t @-> t @-> returning void)

  let native_pow =
    foreign "atg_native_pow"
    (ptr t @-> t @-> scalar @-> returning void)

  let native_pow_out =
    foreign "atg_native_pow_out"
    (ptr t @-> t @-> t @-> scalar @-> returning void)

  let native_resize_as_ =
    foreign "atg_native_resize_as_"
    (ptr t @-> t @-> t @-> returning void)

  let native_zero_ =
    foreign "atg_native_zero_"
    (ptr t @-> t @-> returning void)

  let ne =
    foreign "atg_ne"
    (ptr t @-> t @-> t @-> returning void)

  let ne_ =
    foreign "atg_ne_"
    (ptr t @-> t @-> t @-> returning void)

  let ne_out =
    foreign "atg_ne_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let neg =
    foreign "atg_neg"
    (ptr t @-> t @-> returning void)

  let neg_ =
    foreign "atg_neg_"
    (ptr t @-> t @-> returning void)

  let neg_out =
    foreign "atg_neg_out"
    (ptr t @-> t @-> t @-> returning void)

  let nll_loss =
    foreign "atg_nll_loss"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)
